<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
												   xmlns:app="http://schemas.android.com/apk/res-auto"
												   xmlns:tools="http://schemas.android.com/tools"
												   android:layout_width="match_parent"
												   android:layout_height="match_parent"
												   android:background="@mipmap/thin21"
												   app:layout_behavior="@string/appbar_scrolling_view_behavior"
												   tools:context=".MainActivity"
												   tools:showIn="@layout/activity_main">

	<EditText
			android:id="@+id/tv_beer"
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="26dp"
			android:layout_marginEnd="16dp"
			android:text="@string/beer"
			android:textAlignment="viewStart"
			android:textSize="18sp"
			app:layout_constraintEnd_toStartOf="@+id/tv_beer_count"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

	<TextView
			android:id="@+id/tv_beer_count"
			android:layout_width="30dp"
			android:layout_height="40dp"
			android:layout_marginTop="24dp"
			android:layout_marginEnd="16dp"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="18sp"
			app:layout_constraintEnd_toStartOf="@+id/button_add"
			app:layout_constraintTop_toTopOf="parent"/>

	<Button
			android:id="@+id/button_add"
			android:layout_width="40dp"
			android:layout_height="35dp"
			android:layout_marginTop="24dp"
			android:layout_marginEnd="16dp"
			android:background="@android:drawable/ic_input_add"
			android:onClick="increaseBeerCount"
			app:layout_constraintEnd_toStartOf="@+id/button_reduce"
			app:layout_constraintTop_toTopOf="parent"/>

	<Button
			android:id="@+id/button_reduce"
			android:layout_width="40dp"
			android:layout_height="35dp"
			android:layout_marginTop="24dp"
			android:layout_marginEnd="16dp"
			android:background="@android:drawable/ic_delete"
			android:onClick="reduceBeerCount"
			app:layout_constraintEnd_toStartOf="@+id/et_price"
			app:layout_constraintTop_toTopOf="parent"/>

	<EditText
			android:id="@+id/et_price"
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:layout_marginTop="26dp"
			android:layout_marginEnd="8dp"
			android:gravity="top"
			android:inputType="numberDecimal"
			android:textAlignment="center"
			android:textSize="18sp"
			app:layout_constraintEnd_toStartOf="@+id/tv_equals"
			app:layout_constraintTop_toTopOf="parent"/>

	<TextView
			android:id="@+id/tv_equals"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="34dp"
			android:layout_marginEnd="9dp"
			android:text="@string/equals"
			app:layout_constraintEnd_toStartOf="@+id/tv_total_price_of_line"
			app:layout_constraintTop_toTopOf="parent"/>

	<TextView
			android:id="@+id/tv_total_price_of_line"
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:layout_marginTop="24dp"
			android:layout_marginEnd="16dp"
			android:gravity="center"
			android:text="@string/default_price"
			android:textAlignment="center"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

	<Button
			android:id="@+id/button_to_lottie_animation"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_marginStart="24dp"
			android:layout_marginBottom="24dp"
			android:background="@android:drawable/btn_star_big_on"
			android:onClick="onClickLottieAnimationButton"
			android:text="@string/lottie"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>